# app.ts
@@ -2,11 +2,12 @@ import express, { Request, Response, NextFunction } from "express";
 import cors from "cors";
 import swaggerUi from "swagger-ui-express";
 import swaggerFile from "./swaggerSchema/swagger_output.json";
-import { UserRouter } from "./routers/users";
 import { HealthRouter } from "./routers/health";
+import { UserRouter } from "./routers/users";
 import { BoatRouter } from "./routers/boats";
 import { LogRouter } from "./routers/logs";
 import { TaskRouter } from "./routers/tasks";
+import { ExpenseRouter } from "./routers/expenses";
 
 const app = express();
 
@@ -16,11 +17,12 @@ app.use(express.urlencoded({ extended: true }));
 
 app.use("/swagger-ui", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
-app.use("/", HealthRouter);
 app.use("/users", UserRouter);
 app.use("/boat", BoatRouter);
 app.use("/logs", LogRouter);
 app.use("/tasks", TaskRouter);
+app.use("/expenses", ExpenseRouter);
+app.use("/", HealthRouter);
 
 app.use((err, req: Request, res: Response, next: NextFunction) => {
   if (err) {
