# swaggerSchema/swagger_output.json
@@ -30,16 +30,6 @@
     }
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/users/": {
       "get": {
         "tags": [
@@ -1201,6 +1191,295 @@
           }
         }
       }
+    },
+    "/expenses/": {
+      "get": {
+        "tags": [
+          "Expense"
+        ],
+        "summary": "Get all expenses",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved list of expenses",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/getAllExpensesResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/expenses/{id}": {
+      "get": {
+        "tags": [
+          "Expense"
+        ],
+        "summary": "Get expense by ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Expense ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved expense data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/getExpenseByIdResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Expense not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Expense"
+        ],
+        "summary": "Update an existing expense",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Expense ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Expense updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/updateExpenseResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input data"
+          },
+          "404": {
+            "description": "Expense not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/updateExpenseDTO"
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Expense"
+        ],
+        "summary": "Delete an expense",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Expense ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Expense deleted successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Expense not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/expenses/boat/{boat_id}/expenses": {
+      "get": {
+        "tags": [
+          "Expense"
+        ],
+        "summary": "Get expenses by boat ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "boat_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved expenses for the boat",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/getExpensesByBoatIdResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Boat not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/expenses/{boat_id}": {
+      "post": {
+        "tags": [
+          "Expense"
+        ],
+        "summary": "Create a new expense",
+        "description": "",
+        "parameters": [
+          {
+            "name": "boat_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Boat ID"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Expense created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/createExpenseResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input data"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createExpenseDTO"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1678,6 +1957,102 @@
       },
       "updateTaskResponse": {
         "$ref": "#/components/schemas/taskDTO"
+      },
+      "expensesDTO": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "example": 1
+          },
+          "boat_id": {
+            "type": "number",
+            "example": 1
+          },
+          "expense_type": {
+            "type": "string",
+            "example": "Fuel"
+          },
+          "amount": {
+            "type": "number",
+            "example": 500
+          },
+          "expense_date": {
+            "type": "string",
+            "example": "2023-08-01T09:00:00Z"
+          },
+          "created_on": {
+            "type": "string",
+            "example": "2023-08-01T09:00:00Z"
+          }
+        }
+      },
+      "createExpenseDTO": {
+        "type": "object",
+        "properties": {
+          "expense_type": {
+            "type": "string",
+            "example": "Fuel"
+          },
+          "amount": {
+            "type": "number",
+            "example": 500
+          },
+          "expense_date": {
+            "type": "string",
+            "example": "2023-08-01T09:00:00Z"
+          },
+          "created_on": {
+            "type": "string",
+            "example": "2023-08-01T09:00:00Z"
+          }
+        }
+      },
+      "updateExpenseDTO": {
+        "type": "object",
+        "properties": {
+          "boat_id": {
+            "type": "number",
+            "example": 1
+          },
+          "expense_type": {
+            "type": "string",
+            "example": "Fuel"
+          },
+          "amount": {
+            "type": "number",
+            "example": 500
+          },
+          "expense_date": {
+            "type": "string",
+            "example": "2023-08-01T09:00:00Z"
+          },
+          "created_on": {
+            "type": "string",
+            "example": "2023-08-01T09:00:00Z"
+          }
+        }
+      },
+      "getAllExpensesResponse": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/expensesDTO"
+        }
+      },
+      "getExpenseByIdResponse": {
+        "$ref": "#/components/schemas/expensesDTO"
+      },
+      "getExpensesByBoatIdResponse": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/expensesDTO"
+        }
+      },
+      "createExpenseResponse": {
+        "$ref": "#/components/schemas/expensesDTO"
+      },
+      "updateExpenseResponse": {
+        "$ref": "#/components/schemas/expensesDTO"
       }
     }
   },
